se modifico el atributo Alt de algunas img se añadio boton de whatsapp

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <!-- Site Metas -->
     <title>Domos Lago Muisca</title>
     <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="description" content="Domos Lago muisca aquitania. El mejor sitio para desconectarte y tener un ambiente de paz.">
     <meta name="author" content="">
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/logo.jpg" type="imagen/logo">
     <link rel="apple-touch-icon" href="images/logo.jpg">
-
+    <link rel="canonical" href="https://www.domoslagomuisca.com/">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Site CSS -->
@@ -37,8 +37,8 @@
 
     <!--Metas de botones de compartir-->
     <meta property="og:url" content="https://www.your-domain.com/your-page.html" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Your Website Title" />
+    <meta property="og:type" content="domos lago muisca" />
+    <meta property="og:title" content="domos aquitania boyaca" />
     <meta property="og:description" content="Your description" />
     <meta property="og:image" content="https://www.your-domain.com/path/image.jpg" />
 
@@ -53,7 +53,7 @@
             <div class="container">
 
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/logo.jpg" width="100px" alt="" />
+                    <img src="images/logo.jpg" width="100px" alt="Domos aquitania Boyaca" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars-rs-food" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
 				  <span class="navbar-toggler-icon"></span>
@@ -97,7 +97,7 @@
     <div id="slides" class="cover-slides">
         <ul class="slides-container">
             <li class="text-center">
-                <img src="images/51.jpeg" alt="imagen">
+                <img src="images/51.jpeg" alt="Domos aquitania Boyaca">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -109,7 +109,7 @@
                 </div>
             </li>
             <li class="text-center">
-                <img src="images/17.jpeg" alt="imagen domos aquitania boyaca">
+                <img src="images/17.jpeg" alt="domos aquitania boyaca">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -121,7 +121,7 @@
                 </div>
             </li>
             <li class="text-center">
-                <img src="images/04.jpeg" alt="imagen domos aquitania boyaca">
+                <img src="images/04.jpeg" alt="domos aquitania boyaca">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -145,7 +145,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <img src="images/50.jpeg" alt="aquitania boyaca" class="img-fluid">
+                    <img src="images/50.jpeg" alt="Domos aquitania Boyaca" class="img-fluid">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 text-center">
                     <div class="inner-column">
@@ -206,7 +206,7 @@
             <div class="row special-list">
                 <div class="col-lg-4 col-md-6 special-grid drinks">
                     <div class="gallery-single fix">
-                        <img src="images/planes/001.jpeg" class="img-fluid" alt="Image domos aquitania boyaca">
+                        <img src="images/planes/001.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">1 Adulto</h4>
@@ -224,7 +224,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid drinks">
                     <div class="gallery-single fix">
-                        <img src="images/planes/002.jpeg" class="img-fluid" alt="Image aquitania boyaca">
+                        <img src="images/planes/002.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">1 Adulto y 2 Niños</h4>
@@ -241,7 +241,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid drinks">
                     <div class="gallery-single fix">
-                        <img src="images/planes/003.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/003.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">1 Adulto y 3 Niños</h4>
@@ -258,7 +258,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch">
                     <div class="gallery-single fix">
-                        <img src="images/planes/005.jpeg" class="img-fluid" alt="Image aquitania boyaca">
+                        <img src="images/planes/005.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">2 Adultos</h4>
@@ -276,7 +276,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch">
                     <div class="gallery-single fix">
-                        <img src="images/planes/006.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/006.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">2Adultos y 1 Niño</h4>
@@ -294,7 +294,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch">
                     <div class="gallery-single fix">
-                        <img src="images/planes/008.jpeg" class="img-fluid" alt="Image aquitania boyaca">
+                        <img src="images/planes/008.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">2 Adultos y 2 Niños</h4>
@@ -312,7 +312,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch1">
                     <div class="gallery-single fix">
-                        <img src="images/planes/009.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/009.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">3 Adultos</h4>
@@ -330,7 +330,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch1">
                     <div class="gallery-single fix">
-                        <img src="images/planes/010.jpeg" class="img-fluid" alt="Image domos aquitania boyaca">
+                        <img src="images/planes/010.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">3 Adultos y 1 Niño</h4>
@@ -348,7 +348,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch1">
                     <div class="gallery-single fix">
-                        <img src="images/planes/011.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/011.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">4 Adultos</h4>
@@ -383,7 +383,7 @@
                             <div class="col-sm-12 col-md-4 col-lg-4">
                                 <!-- <h2>Airbnb</h2> -->
                                 <a class="lightbox" href="https://www.airbnb.mx/rooms/53834124" target="_blank">
-                                    <img class="img-fluid icono" src="images/airbnb.png" alt="Gallery Images domos aquitania boyaca">
+                                    <img class="img-fluid icono" src="images/airbnb.png" alt="domos aquitania boyaca">
                                 </a>
                             </div>
 
@@ -559,7 +559,7 @@
                     <div class="overflow-hidden">
                         <h4>Correo</h4>
                         <p class="lead">
-                            yourmail@gmail.com
+                            lagomuisca@gmail.com
                         </p>
                     </div>
                 </div>
@@ -576,7 +576,13 @@
         </div>
     </div>
     <!-- End Contact info -->
+    <!--Boton de whatsapp -->
 
+    <div class="btn-whatsapp">
+        <a href="https://api.whatsapp.com/send?phone=3203985300" target="_blank">
+            <img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="reservar domos aquitania">
+        </a>
+    </div>
     <!-- Start Footer -->
     <footer class="footer-area bg-f">
         <div class="container">
