--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@
                     <div class="overflow-hidden">
                         <h4>Correo</h4>
                         <p class="lead">
-                            yourmail@gmail.com
+                            lagomuisca@gmail.com
                         </p>
                     </div>
                 </div>
