Se modifico la seccion de reservas

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <li class="nav-item active"><a class="nav-link" href="index.html">Inicio</a></li>
 
                         <li class="nav-item"><a class="nav-link" href="about.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#todos">Planes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
                         <li class="nav-item"><a class="nav-link" href="gallery.html">Galeria</a></li>
                         <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">Planes</a>
@@ -103,7 +103,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Bienvenidos <br> Domos Lago Muisca</strong></h1>
                             <p class="m-b-40">Desconectate de la rutina y conectate con la naturaleza.</p>
-                            <p><a class="btn btn-lg btn-circle btn-outline-new-white" href="#">Reservation</a></p>
+                            <p><a class="btn btn-lg btn-circle btn-outline-new-white" href="#">Reserva directa</a></p>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Bienvenidos <br> Domos Lago Muisca</strong></h1>
                             <p class="m-b-40">Desconectate de la rutina y conectate con la naturaleza.</p>
-                            <p><a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=1&adults=1">Reservation</a></p>
+                            <p><a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=1&adults=1">Reserva directa</a></p>
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Bienvenidos <br> Domos Lago Muisca</strong></h1>
                             <p class="m-b-40">Desconectate de la rutina y conectate con la naturaleza.</p>
-                            <p><a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=1&adults=1">Reservation</a></p>
+                            <p><a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=1&adults=1">Reserva directa</a></p>
                         </div>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                             el lugar hay espacio para hacer fogata o una parrillada, cerca hay muelle para paseos en lancha y restaurantes, hay varios atractivos turísticos entre ellos visitar playa blanca. Número de permiso 94069
                         </p>
                         <p>Sed semper orci sit amet porta placerat. Etiam quis finibus eros. Sed aliquam metus lorem, a pellentesque tellus pretium a. Nulla placerat elit in justo vestibulum, et maximus sem pulvinar.</p>
-                        <a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=1&adults=1">Reservation</a>
+                        <a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=1&adults=1">Reserva directa</a>
                     </div>
                 </div>
             </div>
@@ -178,7 +178,32 @@
         </div>
     </div>
     <!-- End QT -->
+    <hr>
+    <div class="menu-box boxImgDomos">
+        <div class="container boxImgDomos">
+            <div class="row boxImgDomos">
+                <div class="col-lg-12">
 
+                    <div class="heading-title text-center">
+                        <h2>¡ Reserva directamente con nosotros aqui !</h2>
+                    </div>
+                    <center>
+                        <a class="lightbox box_a" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">
+                            <img class="img-fluid iconoImg" src="images/logo.jpg" alt="Gallery Images domos aquitania boyaca">
+                        </a>
+                    </center>
+                </div>
+
+                <div class="button">
+                    <a href="index.html" class="enlaceReserva">
+                        Reserva ahora
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <hr>
     <!-- Start planes -->
     <div class="menu-box">
         <div class="container">
@@ -189,6 +214,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-lg-12">
                     <div class="special-menu text-center">
@@ -380,22 +406,24 @@
                         <p>Selecciona la opcion con la que te gustaria reservar</p>
 
                         <div class="reservas">
-                            <div class="col-sm-12 col-md-4 col-lg-4">
+                            <div class="col-sm-12 col-md-4 col-lg-4 boxImg">
                                 <!-- <h2>Airbnb</h2> -->
                                 <a class="lightbox" href="https://www.airbnb.mx/rooms/53834124" target="_blank">
                                     <img class="img-fluid icono" src="images/airbnb.png" alt="domos aquitania boyaca">
                                 </a>
                             </div>
 
-                            <div class="col-sm-12 col-md-4 col-lg-4">
+                            <div class="col-sm-12 col-md-4 col-lg-4 boxImg">
                                 <!-- <h2>Booking</h2> -->
                                 <a class="lightbox" href="https://www.booking.com/hotel/co/domos-lago-muisca-chia.es-ar.html" target="_blank">
-                                    <img class="img-fluid icono" src="images/bookingcom-logo-png-transparent.png" alt="Gallery Images domos aquitania boyaca">
+                                    <img class="img-fluid icono" src="images/booking-com.png" alt="Gallery Images domos aquitania boyaca">
                                 </a>
                             </div>
-                            <div class="col-sm-12 col-md-4 col-lg-4">
-                                <!-- <h2>Airbnb</h2> -->
-                                <a class="lightbox" href="https://api.whatsapp.com/send?phone=3203985300" target="_blank">
+
+                            <div class="col-sm-12 col-md-4 col-lg-4 boxImg">
+                                <h3>Reservar directamente aqui!</h3>
+
+                                <a class="lightbox" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">
                                     <img class="img-fluid icono" src="images/logo.jpg" alt="Gallery Images domos aquitania boyaca">
                                 </a>
                             </div>
@@ -579,7 +607,7 @@
     <!--Boton de whatsapp -->
 
     <div class="btn-whatsapp">
-        <a href="https://api.whatsapp.com/send?phone=3203985300" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">
             <img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="reservar domos aquitania">
         </a>
     </div>
