--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                                 <a class="dropdown-item" href="https://maps.app.goo.gl/5hRyKr1ZzbhuKcXy5" target="_blank">Google</a>
                             </div>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                     </ul>
 
                 </div>
