--- a/planes.html
+++ b/planes.html
@@ -10,15 +10,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Site Metas -->
-    <title>Glamping Lago Muisca</title>
+    <title>Domos Lago Muisca</title>
     <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="description" content="Domos Lago muisca aquitania. El mejor sitio para desconectarte y tener un ambiente de paz.">
     <meta name="author" content="">
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/logo.jpg" type="imagen/logo">
     <link rel="apple-touch-icon" href="images/logo.jpg">
-
+    <link rel="canonical" href="https://www.domoslagomuisca.com/">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Site CSS -->
@@ -28,10 +28,20 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 
+    <link rel="stylesheet" href="./css/style2.css">
+
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!--Metas de botones de compartir-->
+    <meta property="og:url" content="https://www.your-domain.com/your-page.html" />
+    <meta property="og:type" content="domos lago muisca" />
+    <meta property="og:title" content="domos aquitania boyaca" />
+    <meta property="og:description" content="Your description" />
+    <meta property="og:image" content="https://www.your-domain.com/path/image.jpg" />
+
 
 </head>
 
@@ -72,7 +82,7 @@
                                 <a class="dropdown-item" href="https://maps.app.goo.gl/5hRyKr1ZzbhuKcXy5" target="_blank">Google</a>
                             </div>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                     </ul>
 
                 </div>
@@ -94,7 +104,47 @@
         </div>
     </div>
     <!-- End All Pages -->
+    <!-- Reservas -->
+    <div class="gallery-box">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="heading-title text-center">
+                        <h2>Reserva tambien en</h2>
+                        <p>Selecciona la opcion con la que te gustaria reservar</p>
 
+                        <div class="reservas">
+                            <div class="col-sm-12 col-md-4 col-lg-4 boxImg">
+                                <!-- <h2>Airbnb</h2> -->
+                                <a class="lightbox" href="https://www.airbnb.mx/rooms/53834124" target="_blank">
+                                    <img class="img-fluid icono" src="images/airbnb.png" alt="domos aquitania boyaca">
+                                </a>
+                            </div>
+
+                            <div class="col-sm-12 col-md-4 col-lg-4 boxImg">
+                                <!-- <h2>Booking</h2> -->
+                                <a class="lightbox" href="https://www.booking.com/hotel/co/domos-lago-muisca-chia.es-ar.html" target="_blank">
+                                    <img class="img-fluid icono" src="images/booking-com.png" alt="Gallery Images domos aquitania boyaca">
+                                </a>
+                            </div>
+
+                            <div class="col-sm-12 col-md-4 col-lg-4 boxImg">
+                                <h3>Reservar directamente aqui!</h3>
+
+                                <a class="lightbox" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">
+                                    <img class="img-fluid icono" src="images/logo.jpg" alt="Gallery Images domos aquitania boyaca">
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    </div>
+    <hr>
     <!-- Start planes -->
     <div class="menu-box">
         <div class="container">
