--- a/about.html
+++ b/about.html
@@ -127,7 +127,32 @@
         </div>
     </div>
     <!-- End About -->
+    <hr>
+    <div class="menu-box boxImgDomos">
+        <div class="container boxImgDomos">
+            <div class="row boxImgDomos">
+                <div class="col-lg-12">
 
+                    <div class="heading-title text-center">
+                        <h2>¡ Reserva directamente con nosotros aqui !</h2>
+                    </div>
+                    <center>
+                        <a class="lightbox box_a" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">
+                            <img class="img-fluid iconoImg" src="images/logo.jpg" alt="Gallery Images domos aquitania boyaca">
+                        </a>
+                    </center>
+                </div>
+
+                <div class="button">
+                    <a href="https://api.whatsapp.com/send?phone=+573203985300" target="_blanck" class="enlaceReserva">
+                        Reserva ahora
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <hr>
 
 
     <!-- Start planes -->
