--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 </div>
 
                 <div class="button">
-                    <a href="index.html" class="enlaceReserva">
+                    <a href="https://api.whatsapp.com/send?phone=+573203985300" target="_blanck" class="enlaceReserva">
                         Reserva ahora
                     </a>
                 </div>
