--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 
-    <link rel="stylesheet" href="./css/style2.css">
+    <link rel="stylesheet" href="css/style2.css">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
