modificacion en seccion reserva

--- a/planes.html
+++ b/planes.html
@@ -104,45 +104,38 @@
         </div>
     </div>
     <!-- End All Pages -->
+    <hr>
     <!-- Reservas -->
     <div class="gallery-box">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="heading-title text-center">
-                        <h2>Reserva tambien en</h2>
-                        <p>Selecciona la opcion con la que te gustaria reservar</p>
-
-                        <div class="reservas">
-                            <div class="col-sm-12 col-md-4 col-lg-4 boxImg">
-                                <!-- <h2>Airbnb</h2> -->
-                                <a class="lightbox" href="https://www.airbnb.mx/rooms/53834124" target="_blank">
-                                    <img class="img-fluid icono" src="images/airbnb.png" alt="domos aquitania boyaca">
-                                </a>
-                            </div>
-
-                            <div class="col-sm-12 col-md-4 col-lg-4 boxImg">
-                                <!-- <h2>Booking</h2> -->
-                                <a class="lightbox" href="https://www.booking.com/hotel/co/domos-lago-muisca-chia.es-ar.html" target="_blank">
-                                    <img class="img-fluid icono" src="images/booking-com.png" alt="Gallery Images domos aquitania boyaca">
-                                </a>
-                            </div>
-
-                            <div class="col-sm-12 col-md-4 col-lg-4 boxImg">
-                                <h3>Reservar directamente aqui!</h3>
-
-                                <a class="lightbox" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">
-                                    <img class="img-fluid icono" src="images/logo.jpg" alt="Gallery Images domos aquitania boyaca">
-                                </a>
-                            </div>
-                        </div>
+                        <h2>Galeria</h2>
 
                     </div>
                 </div>
-
+            </div>
+            <div class="tz-gallery">
+                <div class="row">
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <a class="lightbox" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blanck">
+                            <img class="img-fluid" src="images/logo.jpg" alt="Gallery Images domos aquitania boyaca">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4 col-lg-4">
+                        <a class="lightbox" href="https://www.booking.com/hotel/co/domos-lago-muisca-chia.es-ar.html" target="_blank">
+                            <img class="img-fluid " src="images/booking-com.png " alt="Gallery Images domos aquitania boyaca ">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4 col-lg-4 ">
+                        <a class="lightbox " href="https://www.airbnb.mx/rooms/53834124" target="_blanck">
+                            <img class="img-fluid " src="images/airbnb.png " alt="Gallery Images domos aquitania boyaca ">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
     </div>
     <hr>
     <!-- Start planes -->
