modificacion en el titulo de reserva

--- a/index.html
+++ b/index.html
@@ -402,7 +402,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="heading-title text-center">
-                        <h2>Galeria</h2>
+                        <h2>reserva </h2>
+                        <span>Selecciona alguna de estas opciones para reservar!</span>
 
                     </div>
                 </div>
