modificacion en el titulo de reserva

--- a/about.html
+++ b/about.html
@@ -154,9 +154,8 @@
                 </div>
 
                 <div class="button">
-                    <a href="https://api.whatsapp.com/send?phone=+573203985300" target="_blanck" class="enlaceReserva">
-                        Reserva ahora
-                    </a>
+                    <a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=1&adults=1">Reserva directa</a>
+
                 </div>
 
             </div>
