--- a/planes.html
+++ b/planes.html
@@ -111,8 +111,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="heading-title text-center">
-                        <h2>Galeria</h2>
-
+                        <h2>Reserva</h2>
+                        <span>Selecciona alguna de estas opciones para reservar!</span>
                     </div>
                 </div>
             </div>
@@ -328,7 +328,31 @@
         </div>
     </div>
     <!-- End planes -->
+    <hr>
+    <div class="menu-box boxImgDomos">
+        <div class="container boxImgDomos">
+            <div class="row boxImgDomos">
+                <div class="col-lg-12">
 
+                    <div class="heading-title text-center">
+                        <h2>¡ Reserva directamente con nosotros aqui !</h2>
+                    </div>
+                    <center>
+                        <a class="lightbox box_a" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">
+                            <img class="img-fluid iconoImg" src="images/logo.jpg" alt="Gallery Images domos aquitania boyaca">
+                        </a>
+                    </center>
+                </div>
+
+                <div class="button">
+                    <a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=1&adults=1">Reserva directa</a>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <hr>
 
     <!-- Start Contact info -->
     <div class="contact-imfo-box">
@@ -365,32 +389,7 @@
         </div>
     </div>
     <!-- End Contact info -->
-    <hr>
-    <div class="menu-box boxImgDomos">
-        <div class="container boxImgDomos">
-            <div class="row boxImgDomos">
-                <div class="col-lg-12">
 
-                    <div class="heading-title text-center">
-                        <h2>¡ Reserva directamente con nosotros aqui !</h2>
-                    </div>
-                    <center>
-                        <a class="lightbox box_a" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">
-                            <img class="img-fluid iconoImg" src="images/logo.jpg" alt="Gallery Images domos aquitania boyaca">
-                        </a>
-                    </center>
-                </div>
-
-                <div class="button">
-                    <a href="https://api.whatsapp.com/send?phone=+573203985300" target="_blanck" class="enlaceReserva">
-                        Reserva ahora
-                    </a>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <hr>
     <!-- Start Footer -->
     <footer class="footer-area bg-f">
         <div class="container">
